--- a/.chalice/config.json
+++ b/.chalice/config.json
@@ -1,9 +1,18 @@
 {
   "version": "2.0",
-  "app_name": "test",
+  "app_name": "CMSFilterApp",
   "stages": {
     "dev": {
-      "api_gateway_stage": "api"
+      "api_gateway_stage": "api",
+      "environment_variables": {
+        "OUTPUT_STREAM": "filtered_cmsfeed",
+        "KINESIS_ENDPOINT_URL": "http://172.20.0.2:4568",
+        "AWS_ACCESS_KEY_ID": "dummy",
+        "AWS_SECRET_ACCESS_KEY": "dummy",
+        "AWS_REGION": "us-east-1",
+        "TO_FILTER_PARAMETERS": "operation, body.type",
+        "LOG_LEVEL" : "DEBUG"
+      }
     }
   }
 }
