--- a/.chalice/config.json
+++ b/.chalice/config.json
@@ -1,6 +1,6 @@
 {
   "version": "2.0",
-  "app_name": "CMSFilterApp",
+  "app_name": "FilterArcEventsApp",
   "stages": {
     "dev": {
       "api_gateway_stage": "api",
