--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,7 +1,10 @@
 boto3==1.13.16
 botocore==1.16.16
+docutils==0.15.2
 jmespath==0.10.0
 python-dateutil==2.8.1
 s3transfer==0.3.3
+six==1.15.0
 urllib3==1.25.9
+flake8==3.8.3
 chalice==1.14.1
