added pytest and refracotor code

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,10 +1,14 @@
-boto3==1.13.16
-botocore==1.16.16
-docutils==0.15.2
+boto3==1.14.42
+botocore==1.17.42
+black==19.3b0
+docutils==0.16
 jmespath==0.10.0
 python-dateutil==2.8.1
 s3transfer==0.3.3
 six==1.15.0
-urllib3==1.25.9
+urllib3==1.25.10
 flake8==3.8.3
 chalice==1.14.1
+pytest==6.0.1
+pytest-cov==2.10.0
+pytest-dependency==0.5.1
