--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - '4563-4599:4563-4599'
       - '8055:8080'
     environment:
-      - SERVICES=s3,dynamodb,kinesis,s3,lambda,cloudwatch
+      - SERVICES=s3,dynamodb,kinesis,lambda,cloudwatch
       - DOCKER_HOST=unix:///var/run/docker.sock
       - DEBUG=1
       - DATA_DIR=/tmp/localstack/data
