added error stream to send invalid input

--- a/.chalice/config.json
+++ b/.chalice/config.json
@@ -10,19 +10,18 @@
         "AWS_ACCESS_KEY_ID": "dummy",
         "AWS_SECRET_ACCESS_KEY": "dummy",
         "TO_FILTER_PARAMETERS": "operation",
-        "LOG_LEVEL" : "DEBUG"
+        "LOG_LEVEL" : "DEBUG",
+        "ERROR_STREAM" : "filter.arc.error"
       }
     },
     "prod": {
       "api_gateway_stage": "api",
       "environment_variables": {
         "OUTPUT_STREAM": "filtered.cms.feed",
-        "KINESIS_ENDPOINT_URL": "https://kinesis.us-east-1.amazonaws.com",
-        "AWS_ACCESS_KEY_ID": "iam",
-        "AWS_SECRET_ACCESS_KEY": "iam",
         "AWS_REGION": "us-east-1",
         "TO_FILTER_PARAMETERS": "",
-        "LOG_LEVEL" : "INFO"
+        "LOG_LEVEL" : "INFO",
+        "ERROR_STREAM" : "filter.arc.error"
       }
     }
   }
